# myfirstcode

./: .gitignore  CMakeLists.txt  README.md  leetCode.sln
Debug/: leetCode.ilk
doc/: 密码  未命名绘图.drawio
doc/algorithm/: index.md  (+1 more)
example/leetCode/: 001_windowSlid.h  0626_demo1.h  1011_shipWithinDays.h  103_zigzagLevelOrder.h  104_maxDepth.h  108_sortedArrayToBST.h  1109_corpFlightBookings.h  1122_relativeSortArray.h  113_pathSum.h  1143_longestCommonSubsequence.h  116_connect.h  117_connect.h  11_maxArea.h  1207_uniqueOccurrences.h  120_minimumTotal.h  121_maxProfit.h  1221_balancedStringSplit.h  127_ladderLength.h  128_longestConsecutive.h  129_sumNumberTree.h  129_sumNumbers.h  12_num2Roma.h  130_solve.h  1356_sortByBits.h  136_singleNum.h  13_roma2num.h  141_hasCycle.h  146_LRUCache.h  148_sortList.h  1498_numSubseq.h  14_longestCommonPrefix.h  152_maxProduct.h  154_findMin.h  1583_unhappyFriends.h  1588_sumOddLengthSubarrays.h  15_threeSum.h  1646_getMaximumGenerated.h  165_compareVersion.h  16_threeSumClosest.h  17_letterCombinations.h  (+152 more)
example/leetCode/Utilities/: mediaAarray.h
example/leetCode/include/: ListNode.h  base.h  common_defines.h  global_head.h  head_tree.h  resource.h  testing.h  typedef.h  utils.hpp
example/leetCode/src/: base.cpp  flipImage.cpp  jewelsAndStones.cpp  judgeCircle.cpp  peakIndexInMountainArray.cpp  toLowCase.cpp  uniqueMorseCode.cpp
leetCode/: HanmingDistance.cpp  base.cpp  base.h  helloworld.cpp  leetCode.aps  leetCode.vcxproj  leetCode.vcxproj.filters  main.cpp  peakIndexInMountainArray.cpp  print.h  typedef.h  utils.hpp
(+106 files in other folders)
